--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -111,7 +111,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           tag_name: release
-          name: TGExtra FE
+          name: ${{ github.event.repository.name }}
           body_path: release_body.md
           files: packages/*.deb
           draft: false
