--- a/layout/DEBIAN/control
+++ b/layout/DEBIAN/control
@@ -1,8 +1,8 @@
 Package: com.choco.tg
 Name: TGExtra
-Version: 1.2.1
+Version: 1.2.2
 Architecture: iphoneos-arm
 Description: A simple Tweak For Telegram iOS
-Maintainer: waruhachi
+Maintainer: miuirussia
 Author: choco
 Section: Tweaks
