--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -72,11 +72,12 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
+          set -x
           gh release download release --repo TheWinner02/SideloadFix --pattern 'SideloadFix.dylib' --dir .
           gh release download release --repo TheWinner02/NSEFix --pattern 'NSEFix.dylib' --dir .
           
-          TWEAK=$(ls com.choco.tg_*_iphoneos-arm.deb | head -n1)
-          TGEXTRA_VERSION=$(echo "$TWEAK" | sed -E 's/com\.choco\.tg_([0-9\.]+)_.+\.deb/\1/')
+          TWEAK=$(ls ./packages/com.choco.tg_*_iphoneos-arm.deb | head -n1)
+          TGEXTRA_VERSION=$(echo "$TWEAK" | sed -E 's/\.\/packages\/com\.choco\.tg_([0-9\.]+)_.+\.deb/\1/')
 
           pip install --force-reinstall https://github.com/iOSDecrypted/cyanide/archive/main.zip
           cgen -o "./packages/com.choco.tg_$TGEXTRA_VERSION.cyan" -dqg -f ./SideloadFix.dylib ./NSEFix.dylib "$TWEAK" 
